added the content to the chapters with images and comment and like UX
still need to add this original content to the other chapters.

--- a/up1app/src/pages/code/code.scss
+++ b/up1app/src/pages/code/code.scss
@@ -1,3 +1,7 @@
 page-code {
-
+     h2 {
+          color: red;
+//          text-shadow: .5px .5px grey;
+          text-shadow: 0 0 3px #FF0000;
+     }
 }
